--- a/Chapter3_Measurement.tex
+++ b/Chapter3_Measurement.tex
@@ -1,7 +1,7 @@
 \chapter{Measurements}
 \label{chap:measurement}
 
-In order to be able to validate the results obtained from the finite element simulation (see \cref{chap:xxx}), specific measurements have been carried out.
+In order to be able to validate the results obtained from the finite element simulation (see \cref{chap:results}), specific measurements have been carried out.
 In this chapter, the acoustic power measurement of the sound source and the outer pressure field measurement around the car body are presented.
 The obtained sound power spectrum of the omnidirectional loudspeaker provides simulation input for the finite element analysis in section \ref{section:boundary_conditions}.
 Furthermore, the measurement results of outer pressure field serve as validation for the finite element model in \cref{chap:results}.
@@ -324,6 +324,6 @@ In \cref{fig:frequencydomain}, the blue curve shows the amplitude of acoustic pr
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.6\linewidth]{fig/pressure_field_1000Hz.png}
-    \caption{Pressure field of 1/24-octave frequency 1000 Hz, loudspeaker rear}
+    \caption{Pressure field of 1/24-octave frequency 1000 Hz with loudspeaker placed at the rear.}
     \label{fig:pressurefield_1000Hz}
 \end{figure}
